--- a/css/splash.css
+++ b/css/splash.css
@@ -7,4 +7,16 @@
     text-transform: uppercase;
     font-weight: 900;
     color: #182e4f;
+    text-align: right;
 }
+
+.summary p {
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.6;
+    margin: 0 0 1.5em;
+    text-align: right;
+}
+
