Connect css in public folder to app with express.static function

--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -1,3 +1,7 @@
+body {
+    background-image: "http://drive.google.com/uc?exportview&id=1tXu1SabkFIGGOjzolIBNR5rHVLEJtNfh";
+}
+
 .banner h1 {
     display: block;
     font-size: 4.8rem;
