--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -1,11 +1,32 @@
 body {
     display: block;
-    background-image: url("http://drive.google.com/uc?exportview&id=1s5R4g3L-JOjEe2ltMYsD13sqcKR530gv");
     background-repeat: no-repeat;
     background-color: #414348;
     font-family: haboro-serif, serif;
     font-style: normal;
     font-weight: 300;
+}
+
+.results-background {
+    /* Top image is German movement bg, bottom is Casio GShock bg */
+    background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e");
+    /* background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP"); */
+    min-width: 100%;
+    min-height: 100%;
+    background-size: cover;
+    position: fixed;
+}
+
+.splash-background {
+    background-image: url("http://drive.google.com/uc?exportview&id=1s5R4g3L-JOjEe2ltMYsD13sqcKR530gv");
+    min-width: 100%;
+    min-height: 100%;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
 }
 
 footer {
@@ -64,19 +85,24 @@ h2 {
 
 .search-result-show {
     text-align: center;
-    background-color: lightgray;
+    background-color: rgb(33, 58, 92);
     margin: 2em auto;
     border: 2px solid black;
-    opacity: 0.90;
     filter: alpha(opacity=90);
     text-align: center;
     max-width: 90%;
     min-width: 700px;
+    min-height: 80%;
     border-radius: 6px;
+}
+
+.search-result-show h1 {
+    color: linen;
 }
 
 .splash > h1 {
     font-size: 2.2rem;
+    text-align: left;
 }
 
 .splash-form {
@@ -147,13 +173,19 @@ h2 {
 .top-three-row {
     text-align: center;
     margin: 3em 0;
+    height: 80%
 }
 
 .top-three-row li {
     display: inline-block;
     background-color: linen;
+    top: 5em;
     text-align: center;
+}
+
+.top-three-row img {
     border: 5px solid black;
+
 }
 
 .top-three-row ul {
