--- a/frontend/public/css/reviews.css
+++ b/frontend/public/css/reviews.css
@@ -1,7 +1,31 @@
 .review-index-parent {
-  border: 1px solid red;
+  padding: 30px 10px;
 }
 
-.review-parent {
-  border: 1px solid blue;
+.review-index-header {
+  font-size: 24px;
+}
+
+.review-form-header {
+  font-size: 24px;
+  /* padding: 0 20px; */
+}
+
+.review-item-parent {
+  margin: 10px;
+  padding: 10px;
+  background: lightgrey;
+  border-radius: 4px;
+}
+
+.review-item-header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 8px;
+  font-weight: bold;
+}
+
+.owned-review {
+  background: white;
+  border: 1px solid lightgrey;
 }
