--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -24,7 +24,7 @@ body {
     background-size: cover;
     top: 0;
     left: 0;
-    position: fixed;
+    /* position: fixed; */
 }
 
 footer {
@@ -58,12 +58,12 @@ h2 {
     font-size: 4.8rem;
     letter-spacing: 0;
     line-height: 0.8;
-    padding: 0;
+    /* padding: 0; */
     text-transform: uppercase;
     font-weight: 900;
     color: #182e4f;
     text-align: right;
-    margin: 0.7em 0;
+    padding: 0.7em 0;
 }
 
 .intro {
