--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -24,7 +24,6 @@ body {
     background-size: cover;
     top: 0;
     left: 0;
-    /* position: fixed; */
 }
 
 footer {
@@ -33,7 +32,7 @@ footer {
 }
 
 form .input {
-    padding: 0 1em 1em 1em;
+    padding: 0 1em 0 1em;
     font-size: 1.2rem;
 
 }
@@ -48,9 +47,16 @@ input[type="submit"] {
     font-size: 1.2rem;
 }
 
+h1 {
+    font-size: 2.2rem;
+    font-weight: 600;
+    padding: 1em 0;
+}
+
 h2 {
     font-size: 1.5rem;
-    font-weight: 450;
+    font-weight: 650;
+    padding-bottom: 1em;
 }
 
 .banner h1 {
@@ -58,7 +64,6 @@ h2 {
     font-size: 4.8rem;
     letter-spacing: 0;
     line-height: 0.8;
-    /* padding: 0; */
     text-transform: uppercase;
     font-weight: 900;
     color: #182e4f;
@@ -66,18 +71,22 @@ h2 {
     padding: 0.7em 0;
 }
 
+.input-select {
+    max-width: 40%;
+}
+
 .intro {
     padding-left: 25%;
     padding: 0 10% 10em 30%;
 }
 
-#price {
-    padding-bottom: 4em;
+#movement, #price {
+    padding-bottom: 3em;
 }
 
-.price-inputs {
+.radio-inputs {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 1.5rem;
 }
 
@@ -151,7 +160,6 @@ h2 {
     margin: 2em auto;
     border: 2px solid black;
     opacity: 0.90;
-    filter: alpha(opacity=90);
     text-align: center;
     max-width: 60%;
     min-width: 700px;
@@ -183,7 +191,6 @@ h2 {
 
 .top-three-row img {
     border: 5px solid black;
-
 }
 
 .top-three-row ul {
