--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -26,6 +26,14 @@ body {
     left: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: linen;
+}
+
 footer {
     text-align: right;
     padding: 0 10% 1em 10%;
@@ -57,6 +65,11 @@ h2 {
     font-size: 1.5rem;
     font-weight: 650;
     padding-bottom: 1em;
+}
+
+.back-to-search {
+    font-size: 1.5rem;
+    margin: 1em;
 }
 
 .banner h1 {
@@ -91,12 +104,10 @@ h2 {
 }
 
 .search-result-show {
-    text-align: center;
     background-color: rgb(33, 58, 92);
     margin: 2em auto;
     border: 2px solid black;
     filter: alpha(opacity=90);
-    text-align: center;
     max-width: 90%;
     min-width: 700px;
     min-height: 80%;
@@ -201,6 +212,10 @@ h2 {
     max-width: 80%;
 }
 
+.watch-photo {
+    width: 18em;
+    height: 28em;
+}
 .modal-background {
   position: fixed;
   top: 0;
