--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -84,6 +84,10 @@ h2 {
     padding-bottom: 3em;
 }
 
+.navbar {
+    background-color: transparent;
+}
+
 .radio-inputs {
     display: flex;
     justify-content: space-around;
