--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -26,6 +26,14 @@ body {
     left: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: linen;
+}
+
 footer {
     text-align: right;
     padding: 0 10% 1em 10%;
@@ -57,6 +65,11 @@ h2 {
     font-size: 1.5rem;
     font-weight: 650;
     padding-bottom: 1em;
+}
+
+.back-to-search {
+    font-size: 1.5rem;
+    margin: 1em;
 }
 
 .banner h1 {
@@ -203,6 +216,11 @@ h2 {
     margin: auto;
     text-align: center;
     max-width: 80%;
+}
+
+.watch-photo {
+    width: 18em;
+    height: 28em;
 }
 
 .modal-background {
