--- a/frontend/public/css/reviews.css
+++ b/frontend/public/css/reviews.css
@@ -1,5 +1,5 @@
 .review-index-parent {
-  padding: 30px 10px;
+  padding: 30px 10px 10px;
 }
 
 .review-index-header {
@@ -38,19 +38,20 @@
 
 .new-review-textarea {
   font-size: 16px;
-  border: 1px solid lightgray;
+  border: 1px solid gray;
   border-radius: 4px;
-  padding: 5px;
-  height: 100px;
+  padding: 10px;
+  height: 60px;
 }
 
 .new-review-button {
   padding: 2.5px 0;
-  border: 1px solid lightgray;
+  border: 1px solid gray;
   border-radius: 4px;
   margin-top: 10px;
   font-size: 14px;
   line-height: 18px;
+  background: #fff;
 }
 
 .new-review-button:hover {
@@ -60,7 +61,7 @@
 
 .owned-review {
   background: white;
-  border: 2px solid lightgrey;
+  border: 1px solid gray;
 }
 
 .review-dropdown-icon {
@@ -97,10 +98,12 @@
   border: 2px solid lightgray;
   border-radius: 4px;
   font-size: 14px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .review-dropdown-item {
   padding: 5px;
+  border-bottom: 1px solid lightgray;
 }
 
 .review-dropdown-item:hover {
@@ -108,7 +111,7 @@
 }
 
 .review-dropdown-item:hover {
-  background: lightskyblue
+  background: lightgray
 }
 
 .show {
@@ -126,18 +129,23 @@
 
 .review-edit-textarea {
   font-size: 16px;
-  border: 1px solid lightgray;
+  border: 1px solid gray;
   border-radius: 4px;
-  padding: 5px;
+  padding: 10px;
   height: 60px;
 }
 
 .update-review-button {
   padding: 2.5px 0;
   background: lightgray;
-  border: 1px solid lightgray;
+  border: 1px solid gray;
   border-radius: 4px;
   margin-top: 10px;
   font-size: 14px;
   line-height: 18px;
+}
+
+.update-review-button:hover {
+  cursor: pointer;
+  background: rgb(168, 168, 168);
 }
