--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -14,7 +14,8 @@ body {
     min-width: 100%;
     min-height: 100%;
     background-size: cover;
-    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .splash-background {
@@ -28,10 +29,19 @@ body {
 
 a {
     text-decoration: none;
+    color: linen;
 }
 
-a:visited {
-    color: linen;
+button {
+    background-color: lightgrey;
+    cursor: pointer;
+    padding: 4px 10px;
+    margin: 5px 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 1em;
+    font-weight: 800;
+    color: #263d5f;
 }
 
 footer {
@@ -81,7 +91,7 @@ h2 {
     font-weight: 900;
     color: #182e4f;
     text-align: right;
-    padding: 0.7em 0;
+    padding: 0.4em 0 0.6em;
 }
 
 .input-select {
@@ -108,7 +118,7 @@ h2 {
 }
 
 .search-result-show {
-    background-color: rgb(33, 58, 92);
+    background-color: #182e4f;
     margin: 2em auto;
     border: 2px solid black;
     filter: alpha(opacity=90);
