--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -1,7 +1,43 @@
-/* .profile-page-container {
+.profile-page-container {
     background-color: white;
+    min-height:100vh;
+    /* width: 66%; */
+}
+
+.profile-page-intro-text {
+  padding: 30px 50px;
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 200;
+  color: linen;
+  background: #182e4f;
+  border-radius: 4px;
+}
+
+.search-items-container {
+  padding: 30px 10px 10px;
+}
+
+.search-items-header {
+  font-size: 24px;
+}
+
+/* .search-items-index {
 } */
 
+.search-item-parent {
+    margin: 10px 0;
+    padding: 10px;
+    background: lightgrey;
+    border-radius: 4px;
+}
 
-
+.search-item-header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 8px;
+  font-weight: bold;
+  align-items: center;
+}
 
