--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -54,11 +54,12 @@
   margin: 5px;
   cursor: pointer;
   border-radius: 4px;
-  /* width: 100%; */
+  width: 66%;
+  /* flex-grow: 3; */
 }
 
-/* .profile-search-delete {
-
-} */
+.profile-search-delete {
+  flex-grow: 1;
+}
 
 
