--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -3,11 +3,11 @@ body{
     background-repeat: no-repeat;
     background-color: #414348;
     font-family: haboro-serif, serif;
+    /* font-family: 'Roboto', sans-serif; */
     font-style: normal;
     font-weight: 300;
     min-width: 100%;
     min-height: 100vh;
-    height: 100%;
 }
 
 #app {
@@ -32,6 +32,7 @@ body{
     background-size: cover;
     top: 0;
     left: 0;
+    padding-bottom: 20px;
 }
 
 a {
