--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -2,6 +2,9 @@
     background-color: white;
     min-height:100vh;
     /* width: 66%; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .profile-page-intro-text {
@@ -13,25 +16,35 @@
   color: linen;
   background: #182e4f;
   border-radius: 4px;
+  width: 66%;
 }
 
 .search-items-container {
   padding: 30px 10px 10px;
+  width: 66%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search-items-header {
+  padding: 10px;
   font-size: 21px;
-  padding-bottom: 12px;
+  /* padding-bottom: 12px; */
+  width: 100%;
 }
 
-/* .search-items-index {
-} */
+.search-items-index {
+  width: 100%;
+}
 
 .search-item-parent {
     margin: 5px;
     padding: 5px;
     background: lightgrey;
     border-radius: 4px;
+    height: 9vh;
+    /* width: 66%; */
 }
 
 .search-item-header {
@@ -40,6 +53,7 @@
   /* padding-bottom: 8px; */
   font-weight: bold;
   align-items: center;
+  /* height: 100%; */
 }
 
 .profile-search-button {
@@ -54,12 +68,19 @@
   margin: 5px;
   cursor: pointer;
   border-radius: 4px;
-  width: 66%;
+  width: 100%;
+  height: 100%;
   /* flex-grow: 3; */
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-search-label {
+  /* flex-grow: 1; */
 }
 
 .profile-search-delete {
-  flex-grow: 1;
+  /* flex-grow: 1; */
 }
 
 
