--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -49,10 +49,10 @@
 
 .search-item-header {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   /* padding-bottom: 8px; */
   font-weight: bold;
-  align-items: center;
+  /* align-items: center; */
   /* height: 100%; */
 }
 
@@ -64,23 +64,34 @@
   text-align: center;
   text-decoration: none;
   /* display: inline-block; */
-  font-size: 16px;
-  margin: 5px;
+  font-size: 1.5em;
+  /* margin: 5px; */
   cursor: pointer;
   border-radius: 4px;
   width: 100%;
-  height: 100%;
-  /* flex-grow: 3; */
+  /* height: 100%; */
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .profile-search-label {
-  /* flex-grow: 1; */
 }
 
 .profile-search-delete {
-  /* flex-grow: 1; */
+  width: 1.2em;
+  margin: 0px;
+  padding: 0px;
+  background-color: #182e4f;
+  border: 0px;
+  border-radius: 0px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
-
+.profile-search-delete-icon {
+  /* color: white; */
+}
