--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -85,10 +85,10 @@ input[type="submit"] {
     font-size: 1.2rem;
 }
 
-.back-to-search {
+/* .back-to-search {
     font-size: 1.5rem;
     margin: 1em;
-}
+} */
 
 .banner h1 {
     display: block;
@@ -443,11 +443,10 @@ input[type="submit"] {
 
 .search-result-nav-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .search-result-save-container {
-    margin: 24px;
+    margin: 12px 24px;
 }
