--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -43,8 +43,10 @@
     padding: 5px;
     background: lightgrey;
     border-radius: 4px;
-    height: 9vh;
+    min-height: 6.5vh;
     /* width: 66%; */
+    display: flex;
+    flex-direction: column;
 }
 
 .search-item-header {
@@ -100,4 +102,21 @@
 .search-item-details {
   padding: 5px;
   margin: 5px;
+}
+
+.search-item-details-list {
+  /* display: inline-flex; */
+}
+
+.search-item-details-list-item {
+  float: left;
+  /* display: inline; */
+  background-color: white;
+  padding: .25em;
+  margin: .25em;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: .25em;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
