--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -1,10 +1,11 @@
 .profile-page-container {
-    background-color: white;
-    min-height:100vh;
-    /* width: 66%; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: white;
+  min-height:100vh;
+  /* width: 66%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e");
 }
 
 .profile-page-intro-text {
@@ -17,6 +18,7 @@
   background: #182e4f;
   border-radius: 4px;
   width: 66%;
+  margin-top: 32px;
 }
 
 .search-items-container {
@@ -32,6 +34,9 @@
   font-size: 21px;
   /* padding-bottom: 12px; */
   width: 100%;
+  text-align: center;
+  color: linen;
+  background-color: black;
 }
 
 .search-items-index {
@@ -39,14 +44,15 @@
 }
 
 .search-item-parent {
-    margin: 5px;
-    padding: 5px;
-    background: lightgrey;
-    border-radius: 4px;
-    min-height: 6.5vh;
-    /* width: 66%; */
-    display: flex;
-    flex-direction: column;
+  margin: 5px;
+  padding: 5px;
+  background: lightgrey;
+  border-radius: 4px;
+  min-height: 6.5vh;
+  /* width: 66%; */
+  display: flex;
+  flex-direction: column;
+  background-color: #182e4f;
 }
 
 .search-item-header {
@@ -62,7 +68,7 @@
   background-color: #182e4f;
   border: none;
   color: white;
-  padding: 5px;
+  padding: 10px 10px;
   text-align: center;
   text-decoration: none;
   /* display: inline-block; */
@@ -78,10 +84,10 @@
 }
 
 .profile-search-button:hover {
-  background-color: green;
+  background-color: #006000;
   /* border: .1em black solid; */
   color: white;
-  padding: 5px;
+  padding: 10px 10px;
   text-align: center;
   text-decoration: none;
   /* display: inline-block; */
@@ -97,10 +103,11 @@
 }
 
 .profile-search-button:hover div {
-  background-color: green;
+  background-color: #006000;
 }
 
 .profile-search-label {
+  /* padding-left: .5em; */
 }
 
 .profile-search-delete {
@@ -131,6 +138,7 @@
 .search-item-details {
   padding: 5px;
   margin: 5px;
+  /* background-color: #182e4f; */
 }
 
 .search-item-details-list {
