--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -1,11 +1,12 @@
 .profile-page-container {
-  background-color: white;
+  background-color: #414348;
   min-height:100vh;
   /* width: 66%; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e");
+    background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP");
+  /* background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e"); */
 }
 
 .profile-page-intro-text {
@@ -31,12 +32,13 @@
 
 .search-items-header {
   padding: 10px;
+  margin: 1em;
   font-size: 21px;
   /* padding-bottom: 12px; */
-  width: 100%;
+  width: 33%;
   text-align: center;
   color: linen;
-  background-color: black;
+  background-color: #182e4f;
 }
 
 .search-items-index {
@@ -46,7 +48,7 @@
 .search-item-parent {
   margin: 5px;
   padding: 5px;
-  background: lightgrey;
+  /* background: lightgrey; */
   border-radius: 4px;
   min-height: 6.5vh;
   /* width: 66%; */
@@ -55,56 +57,40 @@
   background-color: #182e4f;
 }
 
-.search-item-header {
+.search-item-parent:hover {
+  margin: 5px;
+  padding: 5px;
+  /* background: lightgrey; */
+  border-radius: 4px;
+  min-height: 6.5vh;
+  /* width: 66%; */
   display: flex;
-  /* justify-content: space-between; */
-  /* padding-bottom: 8px; */
-  font-weight: bold;
-  /* align-items: center; */
-  /* height: 100%; */
+  flex-direction: column;
+  background-color: #003000;
 }
 
-.profile-search-button {
+.search-item-parent:hover div {
+  background-color: #003000;
+}
+
+.search-item-header {
   background-color: #182e4f;
   border: none;
-  color: white;
+  color: linen;
   padding: 10px 10px;
   text-align: center;
   text-decoration: none;
   /* display: inline-block; */
   font-size: 1.5em;
   /* margin: 5px; */
-  cursor: pointer;
   border-radius: 4px;
-  width: 100%;
+  /* width: 100%; */
   /* height: 100%; */
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.profile-search-button:hover {
-  background-color: #006000;
-  /* border: .1em black solid; */
-  color: white;
-  padding: 10px 10px;
-  text-align: center;
-  text-decoration: none;
-  /* display: inline-block; */
-  font-size: 1.5em;
-  /* margin: 5px; */
-  cursor: pointer;
-  border-radius: 4px;
-  width: 100%;
-  /* height: 100%; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.profile-search-button:hover div {
-  background-color: #006000;
-}
 
 .profile-search-label {
   /* padding-left: .5em; */
@@ -114,10 +100,10 @@
   width: 1.2em;
   margin: 0px;
   padding: 0px;
-  background-color: #182e4f;
+  /* background-color: #182e4f; */
   border: 0px;
   border-radius: 0px;
-  color: white;
+  color: linen;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -130,7 +116,7 @@
 
 .profile-search-delete-icon:hover {
   /* color: white; */
-  color: red;
+  color: #900000;
   /* background-color: white; */
 }
 
@@ -148,7 +134,7 @@
 .search-item-details-list-item {
   float: left;
   /* display: inline; */
-  background-color: white;
+  background-color: linen;
   padding: .25em;
   margin: .25em;
   border-color: black;
