--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -5,16 +5,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-    background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP");
+  background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP");
   /* background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e"); */
+  background-size: contain;
 }
 
 .profile-page-intro-text {
-  padding: 30px 50px;
+  padding: 1.5em 1em;
+  /* padding: 30px 50px; */
   text-align: center;
   font-size: 24px;
-  line-height: 20px;
-  font-weight: 200;
+  /* line-height: 20px; */
+  /* font-weight: 200; */
   color: linen;
   background: #182e4f;
   border-radius: 4px;
@@ -49,7 +51,7 @@
   margin: 5px;
   padding: 5px;
   /* background: lightgrey; */
-  border-radius: 4px;
+  border-radius: .3em;
   min-height: 6.5vh;
   /* width: 66%; */
   display: flex;
@@ -75,15 +77,15 @@
 
 .search-item-header {
   background-color: #182e4f;
-  border: none;
+  /* border: none; */
   color: linen;
-  padding: 10px 10px;
+  padding: .5em .5em;
   text-align: center;
-  text-decoration: none;
+  /* text-decoration: none; */
   /* display: inline-block; */
-  font-size: 1.5em;
+  font-size: 1.3em;
   /* margin: 5px; */
-  border-radius: 4px;
+  /* border-radius: 5em; */
   /* width: 100%; */
   /* height: 100%; */
   display: flex;
@@ -122,8 +124,8 @@
 
 
 .search-item-details {
-  padding: 5px;
-  margin: 5px;
+  padding: .5em;
+  /* margin: .25em; */
   /* background-color: #182e4f; */
 }
 
@@ -142,4 +144,5 @@
   border-style: solid;
   border-radius: .25em;
   /* font-family: Arial, Helvetica, sans-serif; */
+  font-size: 1em;
 }
