--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -17,7 +17,8 @@ body{
 .results-background {
     /* Top image is German movement bg, bottom is Casio GShock bg */
     /* background-image: url("https://drive.google.com/uc?exportview&id=160pGDaZBgTxwIV-d-CuJ1wPUPke3DU4e"); */
-    background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP");
+    /* background-image: url("https://drive.google.com/uc?exportview&id=1tZuHPPeNoQojSfjfUhXJFr8BLiWxKHPP"); */
+    background-image: url("/img/background/casio-gshock.jpg");
     min-width: 100%;
     min-height: 100vh;
     background-size: contain;
@@ -26,7 +27,7 @@ body{
 }
 
 .splash-background {
-    background-image: url("http://drive.google.com/uc?exportview&id=1s5R4g3L-JOjEe2ltMYsD13sqcKR530gv");
+    background-image: url("/img/background/omega_wallpaper_1920.jpg");
     min-width: 100%;
     min-height: 100vh;
     background-size: cover;
