--- a/frontend/public/css/loading_spinner.css
+++ b/frontend/public/css/loading_spinner.css
@@ -1,17 +1,16 @@
 
 .lds-spinner {
-  color: gold;
+  color: #182e4f;
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
   padding-top: 90px;
-  z-index: 999;
+  align-self: center;
 }
 .lds-spinner div {
   transform-origin: 40px 40px;
-  animation: lds-spinner 0.12s linear infinite;
-  z-index: 999;
+  animation: lds-spinner 1.2s linear infinite;
 }
 .lds-spinner div:after {
   content: " ";
@@ -22,52 +21,51 @@
   width: 6px;
   height: 18px;
   border-radius: 20%;
-  background: gold;
-  z-index: 999;
+  background: #182e4f;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
-  animation-delay: -0.11s;
+  animation-delay: -1.1s;
 }
 .lds-spinner div:nth-child(2) {
   transform: rotate(30deg);
-  animation-delay: -0.10s;
+  animation-delay: -1s;
 }
 .lds-spinner div:nth-child(3) {
   transform: rotate(60deg);
-  animation-delay: -0.09s;
+  animation-delay: -0.9s;
 }
 .lds-spinner div:nth-child(4) {
   transform: rotate(90deg);
-  animation-delay: -0.08s;
+  animation-delay: -0.8s;
 }
 .lds-spinner div:nth-child(5) {
   transform: rotate(120deg);
-  animation-delay: -0.07s;
+  animation-delay: -0.7s;
 }
 .lds-spinner div:nth-child(6) {
   transform: rotate(150deg);
-  animation-delay: -0.06s;
+  animation-delay: -0.6s;
 }
 .lds-spinner div:nth-child(7) {
   transform: rotate(180deg);
-  animation-delay: -0.05s;
+  animation-delay: -0.5s;
 }
 .lds-spinner div:nth-child(8) {
   transform: rotate(210deg);
-  animation-delay: -0.04s;
+  animation-delay: -0.4s;
 }
 .lds-spinner div:nth-child(9) {
   transform: rotate(240deg);
-  animation-delay: -0.03s;
+  animation-delay: -0.3s;
 }
 .lds-spinner div:nth-child(10) {
   transform: rotate(270deg);
-  animation-delay: -0.02s;
+  animation-delay: -0.2s;
 }
 .lds-spinner div:nth-child(11) {
   transform: rotate(300deg);
-  animation-delay: -0.01s;
+  animation-delay: -0.1s;
 }
 .lds-spinner div:nth-child(12) {
   transform: rotate(330deg);
