--- a/frontend/public/css/splash.css
+++ b/frontend/public/css/splash.css
@@ -24,6 +24,8 @@ body{
     background-size: contain;
     top: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .splash-background {
