--- a/frontend/public/css/loading_spinner.css
+++ b/frontend/public/css/loading_spinner.css
@@ -1,6 +1,6 @@
 
 .lds-spinner {
-  color: #182e4f;
+  color: ivory;
   display: inline-block;
   position: relative;
   width: 80px;
@@ -21,7 +21,7 @@
   width: 6px;
   height: 18px;
   border-radius: 20%;
-  background: #182e4f;
+  background: ivory;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
