--- a/frontend/public/css/session.css
+++ b/frontend/public/css/session.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #182e4f;
+  background: #0B3C5D;
   color: white;
   border-radius: 4px;
 }
